# data-insee-population

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  prepare_dashboard_data.py  vite.config.js
dashboard/css/: dashboard.css
dashboard/js/: app.js  db.js  departments.js  queries.js
dashboard/js/components/: data-table.js  explorer-sidebar.js  filters.js  loading.js
dashboard/js/maps/: department-map.js  epci-map.js  explorer-map.js  iris-map.js
dashboard/js/pages/: department-detail.js  dom-tom.js  explorer.js  geography.js  overview.js  precision.js  pyramid.js  quality.js  temporal.js
data/: .gitkeep
docs/: accuracy_and_biases.md  design.md  findings.md  method.md  validation_findings.md
src/passculture/data/insee_population/: __init__.py  bigquery.py  cli.py  constants.py  downloaders.py  duckdb_processor.py  geo_mappings.py  logging.py  projections.py
src/passculture/data/insee_population/sql/: __init__.py  base.py  mobility.py  projections.py  ratios.py  stats.py
tests/: conftest.py  test_bigquery.py  test_downloaders.py  test_insee_anchor.py  test_integration.py  test_processor.py
validation/: compare_dept_growth.py  compare_epci.py  compare_iris.py  compare_regional.py  compare_sise.py  conclusions.md
